fix height to stop flickering

--- a/style.sass
+++ b/style.sass
@@ -5,12 +5,9 @@
 #img[src=""]
 	display: none
 
-#lottie 
+#lottie
 	max-width: 160px
 	max-height: 160px
-
-#img-col
-	margin-top: auto
 
 .emoji
 	height: 1em
@@ -26,6 +23,13 @@
 
 .section
 	overflow: auto
+
+@media screen and (min-width: 769px)
+	#info
+		height: 5.5em
+
+	#img-col
+		margin: auto 0 10px
 
 @import "node_modules/bulma/sass/utilities/_all"
 
